cmake_minimum_required(VERSION 3.7)
project(DisplayImage)

set(CMAKE_CXX_STANDARD 11)
SET(CMAKE_MODULE_PATH ${CMAKE_INSTALL_PREFIX}/lib/cmake/ )
find_package( OpenCV REQUIRED )
find_package(cvsba REQUIRED )
set(SOURCE_FILES DisplayImage.cpp)
add_executable( DisplayImage DisplayImage.cpp )
include_directories( ${OpenCV_INCLUDE_DIRS} )
target_link_libraries( DisplayImage ${OpenCV_LIBS} ${cvsba_LIBS})
